--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,6 @@
 node_modules
 package-lock.json
 
-output.jpg
-output_4k.jpg
-
 libraries
 logs
 versions
@@ -15,3 +12,7 @@ banned-players.json
 ops.json
 usercache.json
 whitelist.json
+
+*.log
+
+output_*.jpg
