--- a/server.properties
+++ b/server.properties
@@ -1,12 +1,13 @@
 #Minecraft server properties
-#Wed Mar 26 22:36:55 MSK 2025
+#Wed Mar 26 22:58:07 MSK 2025
 accepts-transfers=false
 allow-flight=false
 allow-nether=true
+announce-player-achievements=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
 bug-report-link=
-difficulty=easy
+difficulty=1
 enable-command-block=false
 enable-jmx-monitoring=false
 enable-query=false
@@ -17,7 +18,7 @@ enforce-whitelist=false
 entity-broadcast-range-percentage=100
 force-gamemode=false
 function-permission-level=2
-gamemode=survival
+gamemode=0
 generate-structures=true
 generator-settings={}
 hardcore=false
@@ -28,6 +29,7 @@ level-name=world
 level-seed=
 level-type=minecraft\:normal
 log-ips=true
+max-build-height=256
 max-chained-neighbor-updates=1000000
 max-players=20
 max-tick-time=60000
@@ -47,17 +49,21 @@ rcon.port=25575
 region-file-compression=deflate
 require-resource-pack=false
 resource-pack=
+resource-pack-hash=
 resource-pack-id=
 resource-pack-prompt=
 resource-pack-sha1=
 server-ip=
 server-port=25565
 simulation-distance=10
+snooper-enabled=true
+spawn-animals=true
 spawn-monsters=false
+spawn-npcs=true
 spawn-protection=0
 sync-chunk-writes=true
 text-filtering-config=
 text-filtering-version=0
 use-native-transport=true
-view-distance=64
+view-distance=16
 white-list=false
