--- a/server.properties
+++ b/server.properties
@@ -1,13 +1,12 @@
 #Minecraft server properties
-#Wed Mar 26 23:54:31 MSK 2025
+#Thu Mar 27 01:25:42 MSK 2025
 accepts-transfers=false
 allow-flight=false
 allow-nether=true
-announce-player-achievements=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
 bug-report-link=
-difficulty=1
+difficulty=easy
 enable-command-block=false
 enable-jmx-monitoring=false
 enable-query=false
@@ -18,7 +17,7 @@ enforce-whitelist=false
 entity-broadcast-range-percentage=100
 force-gamemode=false
 function-permission-level=2
-gamemode=0
+gamemode=survival
 generate-structures=true
 generator-settings={}
 hardcore=false
@@ -49,7 +48,6 @@ rcon.port=25575
 region-file-compression=deflate
 require-resource-pack=false
 resource-pack=
-resource-pack-hash=
 resource-pack-id=
 resource-pack-prompt=
 resource-pack-sha1=
@@ -65,5 +63,5 @@ sync-chunk-writes=true
 text-filtering-config=
 text-filtering-version=0
 use-native-transport=true
-view-distance=16
+view-distance=64
 white-list=false
